--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,32 @@
 .sass-cache
 .idea
 *~
-
-*.java.hsp
-*.sonarj
-*.sw*
 .DS_Store
-.settings
-.springBeans
-bin
-build.sh
-integration-repo
-ivy-cache
-jxl.log
-jmx.log
-derby.log
-spring-test/test-output/
-.gradle
-argfile*
-pom.xml
-activemq-data/
 
-/build
-buildSrc/build
-/spring-*/build
-/src/asciidoc/build
-target/
+*target*
+*.jar
+*.war
+*.ear
+*.class
 
-# Eclipse artifacts, including WTP generated manifests
-.classpath
+# eclipse specific git ignore
+*.pydevproject
 .project
-spring-*/src/main/java/META-INF/MANIFEST.MF
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
 
-# IDEA artifacts and output dirs
-*.iml
-*.ipr
-*.iws
-.idea
-out
-test-output
-atlassian-ide-plugin.xml
-.gradletasknamecache
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
